--- a/styles/main.css
+++ b/styles/main.css
@@ -12,3 +12,13 @@
     padding-left: 11%;
     padding-right: 8%;
 }
+
+.top-nav{
+    display: flex;
+    align-items: center;
+    justify-content:space-between;
+    padding: 30px 0 15px;
+    border-bottom: 1px solid #bababa;
+}
+
+
