--- a/styles/main.css
+++ b/styles/main.css
@@ -27,3 +27,9 @@
     margin-right:  30px;
     margin-top: 10px;
 }
+
+.top-nav ul li a{
+    text-decoration: none;
+    color: #fff;
+    font-size: 15px;
+}
