--- a/styles/main.css
+++ b/styles/main.css
@@ -33,3 +33,13 @@
     color: #fff;
     font-size: 15px;
 }
+
+.top-nav button {
+    background: #e91e63;
+    color: #fff;
+    border: 0;
+    outline: 0;
+    border-radius: 30px;
+    padding: 10px 20px;
+    cursor: pointer;
+}
